--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,19 @@
-name: DBD-Multi
-version: 0.01
 abstract: Failover and Load Balancing of DBI Handles
 author: Dan Wright <dwright@cpan.org>
-license: perl
-distribution_type: module
-build_requires:
+build_requires: 
+  Pod::Simple: 0
   Test::More: 0
-  DBD::SQLite: 0
-requires:
-  perl: 5.005
-no_index:
-  directory:
+  Test::Pod: 1.14
+  Test::Pod::Coverage: 1.04
+distribution_type: module
+generated_by: Module::Install version 0.63
+license: perl
+name: DBD-Multi
+no_index: 
+  directory: 
     - inc
-generated_by: Module::Install version 0.36
+    - t
+requires: 
+  Class::Accessor::Fast: 0.19
+  perl: 5.005
+version: 0.02
