--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,7 @@
 abstract: Failover and Load Balancing of DBI Handles
 author: Dan Wright <dwright@cpan.org>
 build_requires: 
+  DBD::SQLite: 1.09
   Pod::Simple: 0
   Test::Exception: 0.21
   Test::More: 0
@@ -16,7 +17,8 @@ no_index:
     - t
 requires: 
   Class::Accessor::Fast: 0.19
+  DBI: 0
   List::Util: 1.18
   Sys::SigAction: 0.1
   perl: 5.005
-version: 0.11
+version: 0.12
